News section done

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="/assign1/styles/style.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
 
     <title>SwinWork | Homepage</title>
   </head>
@@ -42,6 +42,7 @@
         </svg>
       </div>
     </nav>
+
     <header class="header">
       <div class="header__heading-container">
         <h1 class="header__heading">
@@ -51,7 +52,7 @@
       </div>
     </header>
 
-    <nav class="navbar navbar-solid">
+    <nav class="navbar-solid">
       <a class="logo" href="index.html">SwinWORK</a>
       <div class="navbar__link-container">
         <a href="#" class="navbar__link">Services</a>
@@ -79,6 +80,66 @@
       </div>
     </nav>
 
-    <section class="section-hero"></section>
+    <div class="divider"></div>
+
+    <h2 class="sub-heading">Latest news</h2>
+
+    <section class="section-news">
+      <!-- News Item 1 -->
+      <div class="news-item">
+        <div class="news-item__image-container">
+          <img src="./images/news-1.jpg" alt="news-1" />
+        </div>
+        <div class="news-item__content">
+          <h3>AI breakthrough in medical diagnosis</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+        </div>
+      </div>
+
+      <!-- News Item 2 -->
+      <div class="news-item">
+        <div class="news-item__image-container">
+          <img src="./images/news-2.jpg" alt="news-2" />
+        </div>
+        <div class="news-item__content">
+          <h3>New AI-powered robot assists in household chores</h3>
+          <p>
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+            nisi ut aliquip ex ea commodo consequat.
+          </p>
+        </div>
+      </div>
+
+      <!-- News Item 3 -->
+      <div class="news-item">
+        <div class="news-item__image-container">
+          <img src="./images/news-3.jpg" alt="news-3" />
+        </div>
+        <div class="news-item__content">
+          <h3>AI technology revolutionizes transportation industry</h3>
+          <p>
+            Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur.
+          </p>
+        </div>
+      </div>
+
+      <!-- News Item 4 -->
+      <div class="news-item">
+        <div class="news-item__image-container">
+          <img src="./images/news-4.jpg" alt="news-4" />
+        </div>
+        <div class="news-item__content">
+          <h3>AI advancements lead to improved customer service experiences</h3>
+          <p>
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+            officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
