Finish responsibility section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
 
     <title>SwinWork | Homepage</title>
   </head>
@@ -139,6 +139,22 @@
             officia deserunt mollit anim id est laborum.
           </p>
         </div>
+      </div>
+    </section>
+
+    <div class="divider"></div>
+
+    <h2 class="sub-heading">Responsibility</h2>
+
+    <p class="paragraph">
+      Our work to create safe and beneficial AI requires a deep understanding of
+      the potential risks and benefits, as well as careful consideration of the
+      impact.
+    </p>
+
+    <section class="section-responsibility">
+      <div class="section-responsibility__image-container">
+        <img src="./images/responsibility.jpg" alt="Responsibility" />
       </div>
     </section>
   </body>
