--- a/index.html
+++ b/index.html
@@ -146,16 +146,127 @@
 
     <h2 class="sub-heading">Responsibility</h2>
 
-    <p class="paragraph">
-      Our work to create safe and beneficial AI requires a deep understanding of
-      the potential risks and benefits, as well as careful consideration of the
-      impact.
-    </p>
+    <div class="placeholder-container">
+      <p class="paragraph">
+        Our work to create safe and beneficial AI requires a deep understanding
+        of the potential risks and benefits, as well as careful consideration of
+        the impact.
+      </p>
+      <a href="#" class="btn btn-outline btn-sm">How we do it</a>
+    </div>
 
-    <section class="section-responsibility">
-      <div class="section-responsibility__image-container">
-        <img src="./images/responsibility.jpg" alt="Responsibility" />
+    <section class="section-placeholder">
+      <div class="section-placeholder__image-container">
+        <img src="./images/placeholder-1.jpg" alt="placeholder" />
       </div>
     </section>
+
+    <div class="divider"></div>
+
+    <h2 class="sub-heading">Company</h2>
+
+    <div class="placeholder-container">
+      <p class="paragraph">
+        We research generative models and how to align them with human values.
+      </p>
+      <a href="#" class="btn btn-outline btn-sm">Learn about us</a>
+    </div>
+
+    <section class="section-placeholder">
+      <div class="section-placeholder__image-container">
+        <img src="./images/placeholder-2.jpg" alt="placeholder" />
+      </div>
+    </section>
+
+    <div class="divider"></div>
+
+    <div class="placeholder-container">
+      <h2 class="sub-heading">Join us in shaping the future of technology.</h2>
+      <a href="#" class="btn btn-outline btn-sm">Career</a>
+    </div>
+
+    <div class="divider-sm"></div>
+
+    <footer class="footer">
+      <div class="footer__addr">
+        <h1 class="logo">SwinWORK</h1>
+      </div>
+
+      <ul class="footer__nav">
+        <li class="nav__item">
+          <h2 class="nav__title">Media</h2>
+
+          <ul class="nav__ul">
+            <li>
+              <a href="#">Online</a>
+            </li>
+
+            <li>
+              <a href="#">Print</a>
+            </li>
+
+            <li>
+              <a href="#">Alternative Ads</a>
+            </li>
+          </ul>
+        </li>
+
+        <li class="nav__item nav__item--extra">
+          <h2 class="nav__title">Technology</h2>
+
+          <ul class="nav__ul nav__ul--extra">
+            <li>
+              <a href="#">Hardware Design</a>
+            </li>
+
+            <li>
+              <a href="#">Software Design</a>
+            </li>
+
+            <li>
+              <a href="#">Digital Signage</a>
+            </li>
+
+            <li>
+              <a href="#">Automation</a>
+            </li>
+
+            <li>
+              <a href="#">Artificial Intelligence</a>
+            </li>
+
+            <li>
+              <a href="#">IoT</a>
+            </li>
+          </ul>
+        </li>
+
+        <li class="nav__item">
+          <h2 class="nav__title">Legal</h2>
+
+          <ul class="nav__ul">
+            <li>
+              <a href="#">Privacy Policy</a>
+            </li>
+
+            <li>
+              <a href="#">Terms of Use</a>
+            </li>
+
+            <li>
+              <a href="#">Sitemap</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+
+      <div class="legal">
+        <p>&copy; 2024. All rights reserved.</p>
+
+        <div class="legal__links">
+          <span>Made with <span class="heart">♥</span> from Anh Ky Nguyen</span>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
