--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"/>
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./styles/style.css"/>
 
     <title>SwinWork | About</title>
   </head>
