Finish jobs page

--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--Head-->
+  <!--Head-->
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,9 +9,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
-      rel="stylesheet"/>
+      rel="stylesheet"
+    />
 
-    <link rel="stylesheet" href="./styles/style.css"/>
+    <link rel="stylesheet" href="./styles/style.css" />
 
     <title>SwinWork | About</title>
   </head>
@@ -19,257 +20,283 @@
   <!--Body-->
   <body>
     <nav class="navbar">
-        <a class="logo" href="index.html">SwinWORK</a>
-        <div class="navbar__link-container">
-          <a href="#" class="navbar__link">Services</a>
-          <a href="#" class="navbar__link">Career</a>
-          <a href="#" class="navbar__link">About</a>
-        </div>
-        <div class="navbar__btn-container">
-          <a href="#" class="btn btn-outline">Login</a>
-          <svg
-            width="15"
-            height="15"
-            viewBox="0 0 15 15"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-            class="more"
-          >
-            <path
-              d="M2.5 4C2.22386 4 2 4.22386 2 4.5C2 4.77614 2.22386 5 2.5 5H12.5C12.7761 5 13 4.77614 13 4.5C13 4.22386 12.7761 4 12.5 4H2.5ZM2 7.5C2 7.22386 2.22386 7 2.5 7H12.5C12.7761 7 13 7.22386 13 7.5C13 7.77614 12.7761 8 12.5 8H2.5C2.22386 8 2 7.77614 2 7.5ZM2 10.5C2 10.2239 2.22386 10 2.5 10H12.5C12.7761 10 13 10.2239 13 10.5C13 10.7761 12.7761 11 12.5 11H2.5C2.22386 11 2 10.7761 2 10.5Z"
-              fill="currentColor"
-              fill-rule="evenodd"
-              clip-rule="evenodd"
-            ></path>
-          </svg>
-        </div>
-      </nav>
+      <a class="logo" href="index.html">SwinWORK</a>
+      <div class="navbar__link-container">
+        <a href="#" class="navbar__link">Services</a>
+        <a href="#" class="navbar__link">Career</a>
+        <a href="#" class="navbar__link">About</a>
+      </div>
+      <div class="navbar__btn-container">
+        <a href="#" class="btn btn-outline">Login</a>
+        <svg
+          width="15"
+          height="15"
+          viewBox="0 0 15 15"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+          class="more"
+        >
+          <path
+            d="M2.5 4C2.22386 4 2 4.22386 2 4.5C2 4.77614 2.22386 5 2.5 5H12.5C12.7761 5 13 4.77614 13 4.5C13 4.22386 12.7761 4 12.5 4H2.5ZM2 7.5C2 7.22386 2.22386 7 2.5 7H12.5C12.7761 7 13 7.22386 13 7.5C13 7.77614 12.7761 8 12.5 8H2.5C2.22386 8 2 7.77614 2 7.5ZM2 10.5C2 10.2239 2.22386 10 2.5 10H12.5C12.7761 10 13 10.2239 13 10.5C13 10.7761 12.7761 11 12.5 11H2.5C2.22386 11 2 10.7761 2 10.5Z"
+            fill="currentColor"
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+          ></path>
+        </svg>
+      </div>
+    </nav>
     <header class="header2">
-        <div class="header2__heading-container">
-          <h1 class="header2__heading">
-            About us
-          </h1>
-        </div>
-      </header>
-    <div class="divider-sm"></div>
+      <div class="header2__heading-container">
+        <h1 class="header2__heading">About us</h1>
+      </div>
+    </header>
 
-<!--Team info-->
+    <nav class="navbar-solid">
+      <a class="logo" href="index.html">SwinWORK</a>
+      <div class="navbar__link-container">
+        <a href="#" class="navbar__link">Services</a>
+        <a href="#" class="navbar__link">Career</a>
+        <a href="#" class="navbar__link">About</a>
+      </div>
+
+      <div class="navbar__btn-container">
+        <a href="#" class="btn btn-outline">Login</a>
+        <svg
+          width="15"
+          height="15"
+          viewBox="0 0 15 15"
+          fill="none"
+          class="more"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M2.5 4C2.22386 4 2 4.22386 2 4.5C2 4.77614 2.22386 5 2.5 5H12.5C12.7761 5 13 4.77614 13 4.5C13 4.22386 12.7761 4 12.5 4H2.5ZM2 7.5C2 7.22386 2.22386 7 2.5 7H12.5C12.7761 7 13 7.22386 13 7.5C13 7.77614 12.7761 8 12.5 8H2.5C2.22386 8 2 7.77614 2 7.5ZM2 10.5C2 10.2239 2.22386 10 2.5 10H12.5C12.7761 10 13 10.2239 13 10.5C13 10.7761 12.7761 11 12.5 11H2.5C2.22386 11 2 10.7761 2 10.5Z"
+            fill="currentColor"
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+          ></path>
+        </svg>
+      </div>
+    </nav>
+    <div class="divider"></div>
+
+    <!--Team info-->
     <dl>
-        <h1 class="sub-heading">SwinWORK Team</h1>
-        <br>
-        <div class="placeholder-container">
+      <h1 class="sub-heading">SwinWORK Team</h1>
+      <br />
+      <div class="placeholder-container">
         <dt class="paragraph">
-            <b>Nguyen Ky Anh</b>
-            <h6 class="sub-heading">SWS01168</h6>
-        </dt>
-        <dd class="paragraph"> 
-            Provide 1-1 support to at least 10 learners per week. 
-            The support includes live coding sessions, progress checking, personalized study plans, and teaching abstract concepts. 
-            VEX-IQ participant, VRC participant, Vietnam Science and Engineering Fair (ViSEF) participant.
-        </dd>
-        <dt class="paragraph">
-            <b>Nguyen Duy An</b>
-            <h6 class="sub-heading">SWS01032</h6>
+          <b>Nguyen Ky Anh</b>
+          <h6 class="sub-heading">SWS01168</h6>
         </dt>
         <dd class="paragraph">
-            Created own website for a pharmacy. 
-            To maintain inventory of medications and to advertise the pharmacy. 
-            Used Python to construct a number of features. 
-            The bot used to graph, answer math problems, create charts, and show the Covid in each nation.
-            Supporting students with the use of MongoDB, ExpressJS, ReactJS, Redux, MaterialUI, NodeJS.
+          Provide 1-1 support to at least 10 learners per week. The support
+          includes live coding sessions, progress checking, personalized study
+          plans, and teaching abstract concepts. Supporting students with the
+          use of MongoDB, ExpressJS, ReactJS, Redux, MaterialUI, NodeJS.
+        </dd>
+        <dt class="paragraph">
+          <b>Nguyen Duy An</b>
+          <h6 class="sub-heading">SWS01032</h6>
+        </dt>
+        <dd class="paragraph">
+          Created own website for a pharmacy. To maintain inventory of
+          medications and to advertise the pharmacy. Used Python to construct a
+          number of features. The bot used to graph, answer math problems,
+          create charts, and show the Covid in each nation. VEX-IQ participant,
+          VRC participant, Vietnam Science and Engineering Fair (ViSEF)
+          participant.
         </dd>
         <a href="#" class="btn btn-outline btn-sm">Contact Us</a>
-        </div>
+      </div>
     </dl>
 
-    <div class="divider-sm"></div>
+    <div class="divider"></div>
 
     <!--Tutor-->
     <dl>
-    <h2 class="sub-heading">Our Tutor</h2>
-    <br>
-    <div class="placeholder-container">
-    <dt class="paragraph"><b>Mr Eric Le</b></dt>
-    <dd class="paragraph">
-        Great lecturer. One of the lecturer that we admire the most.
-        Hilarious and handsome person, 
-        taught us tons of things not only coding but also life experience and career. </dd>
-    </div>
+      <h2 class="sub-heading">Our Tutor</h2>
+      <br />
+      <div class="placeholder-container">
+        <dt class="paragraph"><b>Mr Eric Le</b></dt>
+        <dd class="paragraph">
+          Great lecturer. One of the lecturer that we admire the most. Hilarious
+          and handsome person, taught us tons of things not only coding but also
+          life experience and career.
+        </dd>
+      </div>
     </dl>
 
-<!--Course name-->
+    <!--Course name-->
     <div class="placeholder-container">
-        <h2 class="sub-heading">Our Course</h2>
-        <p class="sub-heading">COS10026</p>
-        </div>
+      <h2 class="sub-heading">Our Course</h2>
+      <p class="sub-heading">COS10026</p>
+    </div>
 
-        <div class="divider"></div>
+    <div class="divider"></div>
 
     <!--Time table-->
     <div class="placeholder-container">
-        <h2 class="sub-heading">Our Schedule</h2>
+      <h2 class="sub-heading">Our Schedule</h2>
     </div>
     <div class="timetable">
-        <div class="week-names">
-                  <div>monday</div>
-                  <div>tuesday</div>
-                  <div>wednesday</div>
-                  <div>thursday</div>
-                  <div>friday</div>
-                  <div class="weekend">saturday</div>
-                  <div class="weekend">sunday</div>
-                </div>
-                <div class="time-interval">
-                  <div>8:00 - 10:00</div>
-                  <div>10:00 - 12:00</div>
-                  <div>12:00 - 14:00</div>
-                  <div>14:00 - 16:00</div>
-                  <div>16:00 - 18:00</div>
-                  <div>18:00 - 20:00</div>
-                </div>
-                <div class="content">
-                <!--8:00-10:00-->
-                  <div></div>
-                  <div></div>
-                  <div>
-                    <div class="accent-pink-gradient"></div>
-                  </div>
-                  <div></div>
-                  <div>
-                    <div class="accent-purple-gradient"></div>
-                </div>
-                  <div class="weekend">
-                        <div class="accent-pink-gradient"></div>
-                  </div>
-                  <div class="weekend"></div>
-                <!--10:00-12:00-->
-                  <div></div>
-                  <div></div>
-                  <div>
-                    <div class="accent-pink-gradient"></div>
-                  </div>
-                  <div>
-                  </div>
-                  <div>
-                    <div class="accent-purple-gradient"></div>
-                </div>
-                
-                  <div class="weekend">
-                    <div class="accent-pink-gradient"></div>
-                  </div>
-                  <div class="weekend"></div>
-                <!--12:00-14:00-->
-                  <div></div>
-                  <div>
-                    <div class="accent-purple-gradient"></div>
-                </div>
-                  <div></div>
-                  <div></div>
-                  <div></div>
+      <div class="week-names">
+        <div>monday</div>
+        <div>tuesday</div>
+        <div>wednesday</div>
+        <div>thursday</div>
+        <div>friday</div>
+        <div class="weekend">saturday</div>
+        <div class="weekend">sunday</div>
+      </div>
+      <div class="time-interval">
+        <div>8:00 - 10:00</div>
+        <div>10:00 - 12:00</div>
+        <div>12:00 - 14:00</div>
+        <div>14:00 - 16:00</div>
+        <div>16:00 - 18:00</div>
+        <div>18:00 - 20:00</div>
+      </div>
+      <div class="content">
+        <!--8:00-10:00-->
+        <div></div>
+        <div></div>
+        <div>
+          <div class="accent-pink-gradient"></div>
+        </div>
+        <div></div>
+        <div>
+          <div class="accent-purple-gradient"></div>
+        </div>
+        <div class="weekend">
+          <div class="accent-pink-gradient"></div>
+        </div>
+        <div class="weekend"></div>
+        <!--10:00-12:00-->
+        <div></div>
+        <div></div>
+        <div>
+          <div class="accent-pink-gradient"></div>
+        </div>
+        <div></div>
+        <div>
+          <div class="accent-purple-gradient"></div>
+        </div>
 
-                <!--14:00-16:00-->
-                  <div class="weekend"></div>
-                  <div class="weekend"></div>
-                  <div></div>
-                  <div></div>
-                  <div></div>
-                  <div></div>
-                  <div></div>
+        <div class="weekend">
+          <div class="accent-pink-gradient"></div>
+        </div>
+        <div class="weekend"></div>
+        <!--12:00-14:00-->
+        <div></div>
+        <div>
+          <div class="accent-purple-gradient"></div>
+        </div>
+        <div></div>
+        <div></div>
+        <div></div>
 
-                <!--16:00-18:00-->
-                  <div class="weekend"></div>
-                  <div class="weekend"></div>
-                  <div></div>
-                  <div></div>
-                  <div></div>
-                  <div></div>
-                  <div></div>
+        <!--14:00-16:00-->
+        <div class="weekend"></div>
+        <div class="weekend"></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
 
-                <!--18:00-20:00-->
-                  <div class="weekend"></div>
-                  <div class="weekend"></div>
-                  <div></div>
-                  <div></div>
-                  <div></div>
-                  <div></div>
-                  <div></div>
-                  <div class="weekend"></div>
-                  <div class="weekend"></div>
-                </div>
-              </div>
+        <!--16:00-18:00-->
+        <div class="weekend"></div>
+        <div class="weekend"></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
 
-        
-</body>
-<div class="divider"></div>
-
-<!--Footer-->
-<footer class="footer">
-  <div class="footer__addr">
-    <h1 class="logo">SwinWORK</h1>
-  </div>
-
-  <ul class="footer__nav">
-    <li class="nav__item">
-      <h2 class="nav__title">Media</h2>
-      <ul class="nav__ul">
-        <li>
-          <a href="#">Online</a>
-        </li>
-        <li>
-          <a href="#">Print</a>
-        </li>
-        <li>
-          <a href="#">Alternative Ads</a>
-        </li>
-      </ul>
-    </li>
-
-    <li class="nav__item nav__item--extra">
-      <h2 class="nav__title">Technology</h2>
-      <ul class="nav__ul nav__ul--extra">
-        <li>
-          <a href="#">Hardware Design</a>
-        </li>
-        <li>
-          <a href="#">Software Design</a>
-        </li>
-        <li>
-          <a href="#">Digital Signage</a>
-        </li>
-        <li>
-          <a href="#">Automation</a>
-        </li>
-        <li>
-          <a href="#">Artificial Intelligence</a>
-        </li>
-        <li>
-          <a href="#">IoT</a>
-        </li>
-      </ul>
-    </li>
-
-    <li class="nav__item">
-      <h2 class="nav__title">Legal</h2>
-      <ul class="nav__ul">
-        <li>
-          <a href="#">Privacy Policy</a>
-        </li>
-        <li>
-          <a href="#">Terms of Use</a>
-        </li>
-        <li>
-          <a href="#">Sitemap</a>
-        </li>
-      </ul>
-    </li>
-  </ul>
-
-  <div class="legal">
-    <p>&copy; 2024 All rights reserved</p>
-  
-  <div class="legal__links">
-      <span>Made by Nguyen Duy An</span>
+        <!--18:00-20:00-->
+        <div class="weekend"></div>
+        <div class="weekend"></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div class="weekend"></div>
+        <div class="weekend"></div>
+      </div>
     </div>
-  </div>
-</footer>
+  </body>
+  <div class="divider-sm"></div>
+
+  <!--Footer-->
+  <footer class="footer">
+    <div class="footer__addr">
+      <h1 class="logo">SwinWORK</h1>
+    </div>
+
+    <ul class="footer__nav">
+      <li class="nav__item">
+        <h2 class="nav__title">Media</h2>
+        <ul class="nav__ul">
+          <li>
+            <a href="#">Online</a>
+          </li>
+          <li>
+            <a href="#">Print</a>
+          </li>
+          <li>
+            <a href="#">Alternative Ads</a>
+          </li>
+        </ul>
+      </li>
+
+      <li class="nav__item nav__item--extra">
+        <h2 class="nav__title">Technology</h2>
+        <ul class="nav__ul nav__ul--extra">
+          <li>
+            <a href="#">Hardware Design</a>
+          </li>
+          <li>
+            <a href="#">Software Design</a>
+          </li>
+          <li>
+            <a href="#">Digital Signage</a>
+          </li>
+          <li>
+            <a href="#">Automation</a>
+          </li>
+          <li>
+            <a href="#">Artificial Intelligence</a>
+          </li>
+          <li>
+            <a href="#">IoT</a>
+          </li>
+        </ul>
+      </li>
+
+      <li class="nav__item">
+        <h2 class="nav__title">Legal</h2>
+        <ul class="nav__ul">
+          <li>
+            <a href="#">Privacy Policy</a>
+          </li>
+          <li>
+            <a href="#">Terms of Use</a>
+          </li>
+          <li>
+            <a href="#">Sitemap</a>
+          </li>
+        </ul>
+      </li>
+    </ul>
+
+    <div class="legal">
+      <p>&copy; 2024 All rights reserved</p>
+
+      <div class="legal__links">
+        <span>Made by Nguyen Duy An</span>
+      </div>
+    </div>
+  </footer>
 </html>
