--- a/apply.html
+++ b/apply.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
 
+    <title>SwinWork | Apply</title>
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <!--Body-->
